admission-registry/config/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: pod-1
    app.kubernetes.io/name: pod-1
  name: pod-1
  namespace: waf
spec:
  containers:
  - image: kss.io/waf/admission-registry:v1.1.0
    imagePullPolicy: Always
    name: admission-registry-whitelist
    ports:
    - containerPort: 443
      name: https-443
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: deploy-1
    app.kubernetes.io/name: deploy-1
  annotations:
    bnblak.com.admission-registry/mutate: ""
  name: deploy-1
  namespace: waf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: deploy-1
      app.kubernetes.io/name: deploy-1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: deploy-1
        app.kubernetes.io/name: deploy-1
    spec:
      containers:
      - name: admission-registry-whitelist
        image: ccc.io/waf/admission-registry:v1.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          name: https-443
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: deploy-1
  namespace: waf
  annotations:
    bnblak.com.admission-registry/mutate: ""
spec:
  ports:
  - name: https-443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: deploy-1
    app.kubernetes.io/name: deploy-1
  type: ClusterIP
