admission-registry/config/admission-webhook.yaml

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: admission-registry
    app.kubernetes.io/name: admission-registry
  name: admission-registry
webhooks:
- admissionReviewVersions: ["v1"]
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsRENDQW55Z0F3SUJBZ0lVVzJ1Wkd1VlAyNU5pb2RnNFVQamxjeGpxV1Jrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lqRUxNQWtHQTFVRUJoTUNRMDR4RVRBUEJnTlZCQWdUQ0VoaGJtZDZhRzkxTVJFd0R3WURWUVFIRXdoSQpZVzVuZW1odmRURVBNQTBHQTFVRUNoTUdRbTVpYkdGck1RMHdDd1lEVlFRTEV3UlRaV3htTVEwd0N3WURWUVFECkV3UnliMjkwTUI0WERUSTFNRFl3T0RFd01Ea3dNRm9YRFRJMk1EWXdPREV3TURrd01Gb3dZakVMTUFrR0ExVUUKQmhNQ1EwNHhFVEFQQmdOVkJBZ1RDRWhoYm1kNmFHOTFNUkV3RHdZRFZRUUhFd2hJWVc1bmVtaHZkVEVQTUEwRwpBMVVFQ2hNR1FtNW [...]
    service:
      name: admission-registry
      namespace: waf
      path: /validate
      port: 443
  name: bnblak.com.admissiono-registry
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE","UPDATE"]
    resources: ["pods"]
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: admission-registry
    app.kubernetes.io/name: admission-registry
  name: admission-registry
webhooks:
- admissionReviewVersions: ["v1"]
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsRENDQW55Z0F3SUJBZ0lVVzJ1Wkd1VlAyNU5pb2RnNFVQamxjeGpxV1Jrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lqRUxNQWtHQTFVRUJoTUNRMDR4RVRBUEJnTlZCQWdUQ0VoaGJtZDZhRzkxTVJFd0R3WURWUVFIRXdoSQpZVzVuZW1odmRURVBNQTBHQTFVRUNoTUdRbTVpYkdGck1RMHdDd1lEVlFRTEV3UlRaV3htTVEwd0N3WURWUVFECkV3UnliMjkwTUI0WERUSTFNRFl3T0RFd01Ea3dNRm9YRFRJMk1EWXdPREV3TURrd01Gb3dZakVMTUFrR0ExVUUKQmhNQ1EwNHhFVEFQQmdOVkJBZ1RDRWhoYm1kNmFHOTFNUkV3RHdZRFZRUUhFd2hJWVc1bmVtaHZkVEVQTUEwRwpBMVVFQ2hNR1FtNW [...]
    service:
      name: admission-registry
      namespace: waf
      path: /mutate
      port: 443
  name: bnblak.com.admissiono-registry
  rules:
  - apiGroups: ["apps",""]
    apiVersions: ["v1"]
    operations: ["CREATE","UPDATE"]
    resources: ["deployments","services"]
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
